--- a/home.html
+++ b/home.html
@@ -17,15 +17,17 @@
 </header>
 
 
+
+
 <h1>Welcome to Austin's Portfolio!</h1>
 
+
 <section>
+<img src="images/About_Me_Image.jpg" alt="Austin Profile Picture" class="center">
 <p>
     I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. My university journey has been the ride of a lifetime. Starting at Biola University and returning to Skyline Community College to transfer to SF State University has taught me that change is inevitable in one's life.  
 </p>
 </section>
-
-
 
 
 
