--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+    <nav>
+        <a href="./home.html">Home</a>
+        <a href="./about.html">About Me</a>
+        <a href="./graphic_design.html">Graphic Design</a>
+        <a href="./contact.html">Contact</a> 
+</header>
+
+
+
+
 </body>
 </html>
