--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+    <nav>
+        <a href="./home.html">Home</a>
+        <a href="./about.html">About Me</a>
+        <a href="./graphic_design.html">Graphic Design</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
+</header>
 </body>
 </html>
