--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Austin's Project 1</title>
 </head>
-
 <body>
 <header>
     <nav>
-        <a href="./about.html">About me</a>
+        <a href="./about.html">About Me</a>
         <a href="./graphic_design.html">Graphic Design</a>
         <a href="./contact.html">Contact</a>
     </nav>
@@ -30,6 +29,9 @@
 <hr>
 </section>
 
+<p>
+  Text
+</p>
 
 
 
