--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css"> 
-    <title>Document</title>
+    <title>Austin's Project 1</title>
 </head>
 <body>
 <header>
     <nav>
-        <a href="./home.html">Home</a>
-        <a href="./about.html">About Me</a>
-        <a href="./graphic_design.html">Graphic Design</a>
-        <a href="./contact.html">Contact</a>
+        <ul>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./graphic_design.html">Graphic Design</a></li>
+        <li><a href="./drawing.html">Drawing</a></li>
+        <li><a href="./photography.html">Photography</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        </ul>
     </nav>
 </header>
+
+
+
+
+
 </body>
 </html>
