--- a/graphic_design.html
+++ b/graphic_design.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Austin's Project 1</title>
 </head>
 <body>
 <header>
     <nav>
-        <a href="./home.html">Home</a>
-        <a href="./about.html">About Me</a>
-        <a href="./graphic_design.html">Graphic Design</a>
-        <a href="./contact.html">Contact</a>
-    </nav>    
+        <ul>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./graphic_design.html">Graphic Design</a></li>
+        <li><a href="./drawing.html">Drawing</a></li>
+        <li><a href="./photography.html">Photography</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
 </header>
     
-
+<div class="parent">
+        <div class="column1"><img src="images/Me.jpg" alt="Image of Me" ></div>
+        <div class="column2"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.
+        </p></div>
+  </div>
     
 </body>
 </html>
