--- a/index.html
+++ b/index.html
@@ -9,31 +9,16 @@
 <body>
 <header>
     <nav>
-        <a href="./about.html">About Me</a>
-        <a href="./graphic_design.html">Graphic Design</a>
-        <a href="./contact.html">Contact</a>
+        <ul>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./graphic_design.html">Graphic Design</a></li>
+        <li><a href="./drawing.html">Drawing</a></li>
+        <li><a href="./photography.html">Photography</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        </ul>
     </nav>
 </header>
 
 
 
 
-<h1>Welcome to Austin's Portfolio!</h1>
-
-
-<section>
-<img src="images/About_Me_Image.jpg" alt="Austin Profile Picture" class="center">
-<p>
-    I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. My university journey has been the ride of a lifetime. Starting at Biola University and returning to Skyline Community College to transfer to SF State University has taught me that change is inevitable in one's life.  
-</p>
-<hr>
-</section>
-
-<p>
-  Text
-</p>
-
-
-
-</body>
-</html>
