--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     </nav>
 </header>
 
+<h1>Welcome to Austin's Portfolio!</h1>
+
+<section>
+<img src="images/Me.jpg" alt="Austin Profile Picture" class="intro">
+</section>
+
+
+<h2>
+   A little bit about me:
+</h2>
+
+
+<section>
+<p>
+   I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. My university journey has been the ride of a lifetime. Starting at Biola University and returning to Skyline Community College to transfer to SF State University has taught me that change is inevitable in one's life. Throughout my professional journey, I developed social, leadership, and organizational skills as well as skills with Adobe Photoshop, Illustrator, and InDesign. My ultimate goal is to utilize my design expertise to produce engaging and powerful marketing campaigns. 
+</p>
+<hr>
+</section>
 
 
 
