--- a/index.html
+++ b/index.html
@@ -21,19 +21,30 @@
 
 <h1>Welcome to Austin's Portfolio!</h1>
 
-<section>
-<img src="images/Me.jpg" alt="Austin Profile Picture" class="intro">
-</section>
+<div class="container">
+    <img src="images/Me.jpg" alt="PFP" class="pfp">
+    <img src="images/Beach.jpg" alt="Beach" class="beach">
+  </div>
 
-
+<div>
 <h2>
    A little bit about me:
 </h2>
+</div>
 
 
 <section>
-<p>
-   I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. My university journey has been the ride of a lifetime. Starting at Biola University and returning to Skyline Community College to transfer to SF State University has taught me that change is inevitable in one's life. Throughout my professional journey, I developed social, leadership, and organizational skills as well as skills with Adobe Photoshop, Illustrator, and InDesign. My ultimate goal is to utilize my design expertise to produce engaging and powerful marketing campaigns. 
+<p class="IntroParagraph">
+   I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. As a graphic designer, I hope to venture into a career of marketing. My academic journey has been marked by transformation, growth, and change. Beginning at Biola University and later transferring to Skyline Community College before settling at San Francisco State University, I've learned that <em>change is inevitable</em> and I now value the time that I have. These changes in my academic environment have not only broadened my perspectives but have also reinforced the understanding that my environment will always change.</p>
+<p class="IntroParagraph">Throughout my educational and professional endeavors, I've improved not only my fundamental skills with Adobe Photoshop, Illustrator, and InDesign but also vital soft skills such as team leadership, communications, and organizational abilities. These skills have been valuable in my path of navigating the intricacies of the design industry, where collaboration, creativity, and effective communication are key. With each project I complete, I've become more skilled at translating my thoughts and ideas into a visually compelling design. I am eager to continue to use my design skills to create designs that promote my personality.</p>
+
+
+
+
+
+
+
+   
 </p>
 <hr>
 </section>
