--- a/drawing.html
+++ b/drawing.html
@@ -10,12 +10,38 @@
     <header>
         <nav>
             <ul>
-            <li><a href="./index.html">About</a></li>
-            <li><a href="./graphic_design.html">Graphic Design</a></li>
-            <li><a href="./drawing.html">Drawing</a></li>
-            <li><a href="./photography.html">Photography</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+                <li><a class="logo" href="./index.html">
+                    <div>
+                    <img src="images/logo.png" alt="logo" class="AHLogo">
+                    </div></a>
+                </li>
+                <li><a href="./about_me.html">About</a></li>
+                <li><a href="./graphic_design.html">Graphic Design</a></li>
+                <li><a href="./drawing.html">Drawing</a></li>
+                <li><a href="./photography.html">Photography</a></li>
             </ul>
         </nav>
+        </nav>
+
+
+<div class="drawingtext">
+    I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.
+</div>
+
+
+<div class="sidebysideimgs">
+    <div class="drawingimgs1">
+      <img src="images/prespective.png" alt="Perspective Drawing" height="500px" width="500px">
+    </div>
+    <div class="drawingimgs1">
+      <img src="images/Still Life 3 E.jpg" alt="Still Life 3" height="500px" width="550px">
+    </div>
+  </div>
+
+
+
+
+
+        
 </body>
 </html>
