--- a/graphic_design.html
+++ b/graphic_design.html
@@ -10,23 +10,43 @@
 <header>
     <nav>
         <ul>
-        <li><a href="./index.html">About</a></li>
-        <li><a href="./graphic_design.html">Graphic Design</a></li>
-        <li><a href="./drawing.html">Drawing</a></li>
-        <li><a href="./photography.html">Photography</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+            <li><a class="logo" href="./index.html">
+                <div>
+                <img src="images/logo.png" alt="logo" class="AHLogo">
+                </div></a>
+            </li>
+            <li><a href="./about_me.html">About</a></li>
+            <li><a href="./graphic_design.html">Graphic Design</a></li>
+            <li><a href="./drawing.html">Drawing</a></li>
+            <li><a href="./photography.html">Photography</a></li>
         </ul>
     </nav>
 </header>
     
+<section>
+    <h1 class="GD">
+        Graphic Design
+    </h1>
+</section>
+
+<section>
 <div class="parent">
         <div class="column1">
-            <img class="album" src="images/album.png" alt="SPLAT!">
-            <img class="Book3" src="images/rendering3.png" alt="Book Rendering!"> 
+            <img class="album" src="images/album.png" alt="SPLAT!" height="350px" width="350px">
+            <img class="Book3" src="images/rendering3.png" alt="Book Rendering!" height="350px" width="350px"> 
         </div>
-        <div class="column2"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.
-        </p></div>
-  </div>
+
+    <div class="DesignText1"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.
+    </p>
+    </div>
+</div>
     
+<hr>
+
+</section>
+
+
+
+
 </body>
 </html>
