--- a/photography.html
+++ b/photography.html
@@ -10,11 +10,15 @@
     <header>
         <nav>
             <ul>
-            <li><a href="./index.html">About</a></li>
-            <li><a href="./graphic_design.html">Graphic Design</a></li>
-            <li><a href="./drawing.html">Drawing</a></li>
-            <li><a href="./photography.html">Photography</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+                <li><a class="logo" href="./index.html">
+                    <div>
+                    <img src="images/logo.png" alt="logo" class="AHLogo">
+                    </div></a>
+                </li>
+                <li><a href="./about_me.html">About</a></li>
+                <li><a href="./graphic_design.html">Graphic Design</a></li>
+                <li><a href="./drawing.html">Drawing</a></li>
+                <li><a href="./photography.html">Photography</a></li>
             </ul>
         </nav>
 </body>
