--- a/photography.html
+++ b/photography.html
@@ -21,5 +21,20 @@
                 <li><a href="./photography.html">Photography</a></li>
             </ul>
         </nav>
+
+        <div class="grid-container">
+            <div class="image">
+                <img src="images/Giants.jpg" alt="Giants">
+            </div>
+            <div class="image">
+                <img src="images/sd.jpg" alt="San Diego">
+            </div>
+            <div class="text">
+                <div class="photographytext">
+                    <p>Photography taught me the importance of finding the best angle and editing photos. Through improving the fundamentals of photography, my Adobe Photoshop skills have also grown. My photography is more focused on the natural world as well as authenticity. 
+                    </p>
+                </div>
+
+       
 </body>
 </html>
