--- a/about_me.html
+++ b/about_me.html
@@ -37,7 +37,17 @@
     <img class="me" src="images/me.jpg" alt="PFP of me" height="500px" weight="500px">
 </section>
 
+<section>
+    <h3> Hobbies and Interests</h3>
+</section>
 
+<section>
+    <ol class="aboutlist">
+        <li>I play basketball around 2 times a week</li>
+        <li>I am also really interested in photography</li>
+        <li>I love to collect sports and Pokemon cards, but it is an expensive hobby</li>
+    </ol>
+</section>
 
 </body>
 </html>
