--- a/drawing.html
+++ b/drawing.html
@@ -23,6 +23,9 @@
         </nav>
         </nav>
 
+<h1>
+    Drawing
+</h1>
 
 <div class="drawingtext">
     I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.
@@ -31,7 +34,7 @@
 
 <div class="sidebysideimgs">
     <div class="drawingimgs1">
-      <img src="images/prespective.png" alt="Perspective Drawing" height="500px" width="500px">
+      <img src="images/prespective.png" alt="Perspective Drawing" height="500px" width="550px">
     </div>
     <div class="drawingimgs1">
       <img src="images/Still Life 3 E.jpg" alt="Still Life 3" height="500px" width="550px">
