--- a/drawing.html
+++ b/drawing.html
@@ -32,14 +32,13 @@
 </div>
 
 
-<div class="sidebysideimgs">
-    <div class="drawingimgs1">
+<div class="drawingimgs1">
       <img src="images/prespective.png" alt="Perspective Drawing" height="500px" width="550px">
-    </div>
-    <div class="drawingimgs1">
       <img src="images/Still Life 3 E.jpg" alt="Still Life 3" height="500px" width="550px">
+      <img src="images/Charcoal.png" alt="Charcoal Drawing"  height="500px" width="550px">
+      <img src="images/WoB.png" alt="White Pencil Black Paper Drawing"  height="500px" width="550px">
     </div>
-  </div>
+</div>
 
 
 
