--- a/graphic_design.html
+++ b/graphic_design.html
@@ -29,20 +29,18 @@
     </h1>
 </section>
 
-<section>
+
 <div class="parent">
         <div class="column1">
             <img class="album" src="images/album.png" alt="SPLAT!" height="350px" width="350px">
             <img class="Book3" src="images/rendering3.png" alt="Book Rendering!" height="350px" width="350px"> 
         </div>
+</div>
 
-    <div class="DesignText1"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.
-    </p>
-    </div>
+<div class="DesignText1"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.</p>
 </div>
     
 
-</section>
 
 
 
