About me updated

--- a/about_me.html
+++ b/about_me.html
@@ -34,6 +34,7 @@
 
 <section>
     <img class="me" src="images/me.jpg" alt="PFP of me" height="500px" weight="500px">
+    <img class="me" src="images/Snow.jpg" alt="Reno Pic" height="500px" weight="500px">
 </section>
 
 <section>
