About and Graphic Design

--- a/about_me.html
+++ b/about_me.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css"> 
     <title>Austin's Project 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<main>
 <header>
     <nav>
         <ul>
@@ -22,13 +27,14 @@
         </ul>
     </nav>
 </header>
+</main>
 
     <h1>
         A Little About Me
     </h1>
 
-    <div>
-        <p class="IntroParagraph">
+    <div class="IntroParagraph">
+        <p>
         I am a graphic designer studying visual communications design at San Francisco State University. My goal is to use graphic design as a tool for marketing. It has become an outlet to express myself creatively. As a graphic designer, I hope to venture into a career of marketing. My academic journey has been marked by transformation, growth, and change. Beginning at Biola University and later transferring to Skyline Community College before settling at San Francisco State University, I've learned that <em>change is inevitable</em> and I now value the time that I have. These changes in my academic environment have not only broadened my perspectives but have also reinforced the understanding that my environment will always change. Throughout my educational and professional endeavors, I've improved not only my fundamental skills with Adobe Photoshop, Illustrator, and InDesign but also vital soft skills such as team leadership, communications, and organizational abilities. These skills have been valuable in my path of navigating the intricacies of the design industry, where collaboration, creativity, and effective communication are key. With each project I complete, I've become more skilled at translating my thoughts and ideas into a visually compelling design. I am eager to continue to use my design skills to create designs that promote my personality.</p>
     </div>
 
@@ -41,11 +47,14 @@
     <h3> Hobbies and Interests</h3>
 </section>
 
-<section>
-    <ol class="aboutlist">
-        <li>I play basketball around 2 times a week</li>
-        <li>I am also really interested in photography</li>
-        <li>I love to collect sports and Pokemon cards, but it is an expensive hobby</li>
+<section class="aboutlist">
+    <ol>
+        <li>I play basketball around 2 times a week. I often try to run some games at the Mashouf Wellness Center becuase there are usually people there looking for some competition. </li>
+        <li>I am also really interested in photography. In the <a href="./photography.html">photography</a> page, I highlight some of my amateur work. I often try to focus on scenery instead of portraits or images of people. I am still trying to learn how to perfect my camera work, but with time, I will achieve that goal.</li>
+        <li>I love to collect sports and Pokemon cards, but it is an expensive hobby. My goal is to continue to collect high value cards and resell them in the future. I am hoping that the players in the sports cards I have will reach the Hall of Fame in their sports so that the value will skyrocket. Regarding the Pokemon cards, I am aiming to find and purchase the more rare cards.</li>
+        <li>My favorite movie is A24's <a class="VidLink" href="https://youtu.be/wxN1T1uxQ2g?si=C900j75HzCtZErnw" target="_blank"><em>Everything Everywhere All At Once.</em></a>
+        </a>The camera work as well as plot are incredibly executed; the cast that the producers chose were incredible too. I see why the film received so many awards.
+        </li>
     </ol>
 </section>
 
