--- a/graphic_design.html
+++ b/graphic_design.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Austin's Project 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -29,21 +32,45 @@
     </h1>
 </section>
 
+<div class="parent">
+    <div class="column1">
+        <img class="album" src="images/album.png" alt="SPLAT!" height="300px" width="300px">
+        <img class="Book3" src="images/rendering3.png" alt="Book Rendering1" height="300px" width="300px"> 
+    </div>
+    <div class="column2">
+        <div class="DesignText1">
+            <h2>
+            Why Graphic Design Interests Me
+            </h2>
+            <p class="pt-serif-regular">The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.</p>
+        </div>
+    </div>
+</div>
 
 <div class="parent">
-        <div class="column1">
-            <img class="album" src="images/album.png" alt="SPLAT!" height="350px" width="350px">
-            <img class="Book3" src="images/rendering3.png" alt="Book Rendering!" height="350px" width="350px"> 
+    <div class="column1">
+        <div class="DesignText2">
+           <h2>
+            Slice Instagram Post
+           </h2>
+            <p class="pt-serif-regular"> The composition on the right was designed for DES 325. I focused on implementing the scissors into the word "slice" by creating the illusion that the scissors are slicing through the text. I separated each letter into its own text box which allowed me to manipulate the arrangment. Through this, I was able to place some letters on top of the scissors and some behind it. This creates the illusion that the word slice is being cut into. 
+            </p>
         </div>
+    </div>
+    <div class="column2">
+        <img class="slice1" src="images/slice1.png" alt="Slice IG Post 1" height="300px" width="300px">
+    </div>
 </div>
 
-<div class="DesignText1"><p>The past few years have been influential in my development of design skills. I started with simple illustrations in Adobe Illustrator like the house and Pepsi can, but transitioned to integrating Photoshop into the designs.  Design, as a whole, opened my eyes to the intricacies of everyday objects and improved my detail-oriented mind. Every little detail counts and needs to be made so that the design works well.</p>
+<div>
+    <h2 id="otherdesigns">Other Designs Made By Me</h2>
 </div>
-    
+<div class="slicetrio">
+    <img class="slicetrio1" src="images/slice3.png" alt="Slice IG Post 2" width="450px" height="450px">
+    <img class="book2" src="images/rendering2.png" alt="Slice IG Post 4" width="450px" height="450px">
+    <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="450px" height="450px">
 
-
-
-
+</div>
 
 </body>
 </html>
