--- a/photography.html
+++ b/photography.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Austin's Project 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,9 +24,10 @@
                 <li><a href="./photography.html">Photography</a></li>
             </ul>
         </nav>
+    </header>
 
 <section>
-    <h1 class="">
+    <h1>
         Photography
     </h1>
 </section>
@@ -38,7 +42,7 @@
             
 <div class="text">
     <div class="photographytext">
-        <p>Photography taught me the importance of finding the best angle and editing photos. Through improving the fundamentals of photography, my Adobe Photoshop skills have also grown. My photography is more focused on the natural world as well as authenticity. </p>
+        <p class="pt-serif-regular">Photography taught me the importance of finding the best angle and editing photos. Through improving the fundamentals of photography, my Adobe Photoshop skills have also grown. My photography is more focused on the natural world as well as authenticity. </p>
     </div>
 </div>
 
