--- a/drawing.html
+++ b/drawing.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Austin's Project 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +31,7 @@
 </h1>
 
 <div class="drawingtext">
-    I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.
+    <p class="pt-serif-regular">I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.</p>
 </div>
 
 
