--- a/graphic_design.html
+++ b/graphic_design.html
@@ -67,7 +67,7 @@
 </div>
 <div class="slicetrio">
     <img class="slicetrio1" src="images/slice3.png" alt="Slice IG Post 2" width="450px" height="450px">
-    <img class="book2" src="images/rendering2.png" alt="Slice IG Post 4" width="450px" height="450px">
+    <img class="book2" src="images/rendering2.png" alt="Book Rendering" width="450px" height="450px">
     <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="450px" height="450px">
 
 </div>
