--- a/about_me.html
+++ b/about_me.html
@@ -29,9 +29,11 @@
 </header>
 </main>
 
+<section>
     <h1>
         A Little About Me
     </h1>
+</section>
 
     <div class="IntroParagraph">
         <p>
