--- a/graphic_design.html
+++ b/graphic_design.html
@@ -53,12 +53,13 @@
            <h2>
             Slice Instagram Post
            </h2>
-            <p class="pt-serif-regular"> The composition on the right was designed for DES 325. I focused on implementing the scissors into the word "slice" by creating the illusion that the scissors are slicing through the text. I separated each letter into its own text box which allowed me to manipulate the arrangment. Through this, I was able to place some letters on top of the scissors and some behind it. This creates the illusion that the word slice is being cut into. 
+            <p class="pt-serif-regular"> The composition on the right was designed for DES 325. I focused on implementing the scissors into the word "slice" by creating the illusion that the scissors are slicing through the text. I separated each letter into its own text box which allowed me to manipulate the arrangment. Through this, I was able to place some letters on top of the scissors and some behind it. This creates the illusion that the word slice is being cut into. The color palette is based on the primary colors but I toned it down so that the colors wouldn't be as strong.
             </p>
         </div>
     </div>
     <div class="column2">
         <img class="slice1" src="images/slice1.png" alt="Slice IG Post 1" height="300px" width="300px">
+        <img class="slice2" src="images/slice3.png" alt="Slice IG Post 2" width="300px" height="300px">
     </div>
 </div>
 
@@ -66,10 +67,9 @@
     <h2 id="otherdesigns">Other Designs Made By Me</h2>
 </div>
 <div class="slicetrio">
-    <img class="slicetrio1" src="images/slice3.png" alt="Slice IG Post 2" width="450px" height="450px">
+    <img class="logoblack" src="images/logo2.png" alt="Logo Black BG" width="450px" height="450px">
     <img class="book2" src="images/rendering2.png" alt="Book Rendering" width="450px" height="450px">
     <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="450px" height="450px">
-
 </div>
 
 </body>
