--- a/drawing.html
+++ b/drawing.html
@@ -30,23 +30,35 @@
     Drawing
 </h1>
 
-<div class="drawingtext">
-    <p class="pt-serif-regular">I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.</p>
-</div>
-
-
-<div class="drawingimgs1">
-      <img src="images/prespective.png" alt="Perspective Drawing" height="500px" width="550px">
-      <img src="images/Still Life 3 E.jpg" alt="Still Life 3" height="500px" width="550px">
-      <img src="images/Charcoal.png" alt="Charcoal Drawing"  height="500px" width="550px">
-      <img src="images/WoB.png" alt="White Pencil Black Paper Drawing"  height="500px" width="550px">
+<div class="drawingparent">
+    <div class="drawingcolumn1">
+        <div class="DesignText1">
+            <h2>
+            The Power of the Pencil
+            </h2>
+            <p class="pt-serif-regular">I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.</p>
+        </div>
+    </div>
+    <div class="drawingcolumn2">
+        <img class="drawing1" src="images/prespective.png" alt="Perspective Drawing" height="250px" width="300px">
+        <img class="drawing2" src="images/Still Life 3 E.jpg" alt="Still Life 3" height="250px" width="300px">
     </div>
 </div>
 
+<div class="drawingparent">
+    <div class="drawingcolumn1">
+        <img class="drawing3" src="images/Charcoal.png" alt="Charcoal Drawing" height="250px" width="300px">
+        <img class="drawing4" src="images/WoB.png" alt="White On Black Drawing" height="250px" width="300px">
+    </div>
+    <div class="drawingcolumn2">
+        <div class="DesignText1">
+            <h2>
+            Mediums of Drawing
+            </h2>
+            <p class="pt-serif-regular">Drawing has been a creative outlet for me; being able to sketch items from real life allows me to see the intricacies and details of it. I have used different mediums such as charcoal, drawing pencils, and white pencil on black paper. The different mediums have opened my eyes to the differences that each of them can make.</p>
+        </div>
+    </div>
+</div>        
 
-
-
-
-        
 </body>
 </html>
