drawing page update

--- a/drawing.html
+++ b/drawing.html
@@ -36,7 +36,7 @@
             <h2>
             The Power of the Pencil
             </h2>
-            <p class="pt-serif-regular">I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light.</p>
+            <p class="pt-serif-regular">I have always expressed interest in drawing. It was a stepping stone for my journey into the art field. I would often sketch in my notebooks and create intricate designs. Drawing has been a passion of mine for as long as I can remember. Through art, I have been exposed to the importance of perspective and light. Still life drawings have enabled me to understand that different perspectives of an object wil yield different results; some drawings might not have one item while some will have all of them. </p>
         </div>
     </div>
     <div class="drawingcolumn2">
@@ -55,10 +55,20 @@
             <h2>
             Mediums of Drawing
             </h2>
-            <p class="pt-serif-regular">Drawing has been a creative outlet for me; being able to sketch items from real life allows me to see the intricacies and details of it. I have used different mediums such as charcoal, drawing pencils, and white pencil on black paper. The different mediums have opened my eyes to the differences that each of them can make.</p>
+            <p class="pt-serif-regular">Drawing has been a creative outlet for me; being able to sketch items from real life allows me to see the intricacies and details of it. I have used different mediums such as charcoal, drawing pencils, and white pencil on black paper. The different mediums have opened my eyes to the differences that each of them can make. My favorite is the charcoal medium because of the ability to smooth the shadings. When I used charcoal for my drawings, I would use my finger to smear the charcoal so that the drawing would have cleaner shadings.</p>
         </div>
     </div>
 </div>        
 
+<div>
+    <h2 id="otherdrawings">Other Designs Made By Me</h2>
+</div>
+<div class="slicetrio">
+    <img class="stilllife2" src="images/Still Life 2.jpg" alt="Still Life 2" width="450px" height="450px">
+    <img class="sketch" src="images/Sketch.jpg" alt="sketch" width="450px" height="450px">
+    <img class="tree" src="images/Tree Drawing.jpg" alt="Tree Drawing" width="450px" height="450px">
+</div>
+
 </body>
 </html>
+
